build_log.txt

> temp-app@0.0.0 build
> vite build

[36mrolldown-vite v7.2.5 [32mbuilding client environment for production...[36m[39m
[2K
transforming...Ô£ô 1757 modules transformed.
Ô£ù Build failed in 307ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid empty selector
1  |  ```css:root {
   |  ^
2  |    /* Light Mode (Default Root) */
3  |    --notion-bg: #ffffff;
    at minifyCSS (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:24130:59)
    at async finalizeCss (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:23976:38)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:2683:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:23523:18)
    at async plugin (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/rolldown/dist/shared/src-CYkh2Ybc.mjs:3285:16)
    at async plugin.<computed> (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/rolldown/dist/shared/src-CYkh2Ybc.mjs:3611:12)
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/rolldown/dist/shared/src-CYkh2Ybc.mjs:2659:18)
    at unwrapBindingResult (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/rolldown/dist/shared/src-CYkh2Ybc.mjs:2634:128)
    at #build (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/rolldown/dist/shared/src-CYkh2Ybc.mjs:4433:34)
    at async buildEnvironment (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:33468:64)
    at async Object.build (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:33871:19)
    at async Object.buildApp (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/chunks/node.js:33868:153)
    at async CAC.<anonymous> (file:///C:/Users/Pichau/Desktop/Finance%20App/node_modules/vite/dist/node/cli.js:629:3)
